@@ -33,6 +33,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #7403: logging: Fixed possible race condition in lock creation.
+
 - Issue #7341: Close the internal file object in the TarFile constructor in
   case of an error.
 
